# avr-pico-programmer

./: README.md
pico/: CMakeLists.txt  avrprog.c  avrprog.h  firmware_image.c  firmware_image.h  firmware_storage.c  firmware_storage.h  main.c  tusb_config.h  usb_descriptors.c
pico/build-pico/: CMakeCache.txt  Makefile  cmake_install.cmake  prog.dis  prog.elf  prog.elf.map  prog.hex  prog.uf2
pico/build-pico/pico-sdk/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/docs/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico/build-pico/pico-sdk/src/common/pico_time/: Makefile  (+1 more)
pico/build-pico/pico-sdk/tools/: Makefile  cmake_install.cmake
(+168 files in other folders)
